# poker-teaching-v1-alpha

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  README.md  __init__.py  gate_output.txt  gate_summary.md  mkdocs.yml  mypy.ini  package-lock.json  pyproject.toml
artifacts/: lp_solution.json  policy_solution.json  tree_flat.json
configs/: classifiers.yaml  size_map.yaml
docs/: GTO-suggest-feature-specify-rebuild.md  GTO_suggest_feature_M1_review.md  GTO_suggest_feature_M2_G2_G3_review.md  GTO_suggest_feature_rebuild_plan.md  GTO_suggest_feature_rebuild_tasks_M1.md  GTO_suggest_feature_rebuild_tasks_M2.md  GTO_suggest_feature_rebuild_tasks_review_M2.md  SUGGEST_FILE_INDEX.md  SUGGEST_MIGRATION_GUIDE.md  poker_teaching_system_suggest_v_0_spec_aligned_with_gto_plan.md  pr_2_设计与配置（hu_flop_v_1_）.md  suggest_current_status.md  suggest_v_0_execution_plan_with_technical_boundaries_how_to.md  tasks_fix_preflop_flop.md  建议功能重构思考  德州扑克单挑GTO与剥削策略.txt  德州扑克各阶段范围建议与现代策略理念.md
infra/: docker-compose.yml
reports/: always_allin_20251016-232244.summary.csv  always_allin_20251016-232244.summary.md  always_allin_20251016-232249.summary.csv  always_allin_20251016-232249.summary.md  always_allin_20251016-233757.summary.csv  always_allin_20251016-233757.summary.md  m1_smoke.md  m2_eval_sample.json  m2_smoke.md  m2_smoke_cloud.md  m2_smoke_local.md  policy_sample.jsonl  policy_table_stats.md
rules/: river.yaml
scripts/: arena_duel.py  check_flop_rules.py  check_preflop_ranges.js  log_presets.md  run_cloud_pipeline.sh  sim_always_allin_vs_bot.py  suggest_debug_tool.py  validate_profile.py
tests/: conftest.py  test_analysis_tags.py  test_api_contract.py  test_api_flow_minimal.py  test_api_suggest.py  test_bucket_semantics.py  test_build_lookup.py  test_build_policy_solution_facing.py  test_calculators.py  test_classifiers_stability.py  test_decision.py  test_defense_framework.py  test_domain_and_annotations.py  test_e2e_min.py  test_e2e_session_flow.py  test_end_to_end_pipeline.py  test_explanations_frequency_phrase.py  test_explanations_render.py  test_fallback_minimal.py  test_flop_decision_contract.py  test_flop_defense_vs_large.py  test_flop_facing_large_gating.py  test_flop_rules_schema.py  test_flop_strong_draw_raise_half.py  test_flop_tptk_low_spr_raise.py  test_flop_v11_limped.py  test_flop_v11_threebet.py  test_flop_v1_policy.py  test_flop_v1_value_raise.py  test_hand_strength.py  test_integration_table_override.py  test_lookup_tables.py  test_lp_solver_backend.py  test_metrics_and_persistence.py  test_mixing_determinism.py  test_node_key.py  test_node_key_facing.py  test_node_key_preflop_spr_na.py  test_observations.py  test_openapi_valid.py  (+50 more)
tools/: __init__.py  audit_policy_vs_rules.py  (+16 more)
(+75 files in other folders)
