[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "poker_teaching"
version = "1.0.0-alpha"
description = "Poker Teaching System - GTO Suggest Feature Rebuild (v1.0-alpha)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Django>=5.0,<6",
    "djangorestframework>=3.15",
    "drf-spectacular>=0.27",
    "psycopg[binary]>=3.1",
    "prometheus_client>=0.20",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "coverage>=7.5",
    "pytest-django>=4.8",
    "openapi-spec-validator>=0.7",
    "ruff>=0.5",
    "black>=24.4",
    "isort>=5.13",
    "mypy>=1.10",
    "factory-boy>=3.3",
    "pre-commit>=3.7",
    "types-requests",
    "mkdocs>=1.6",
    "pokerkit==0.6.3",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pyyaml>=6.0",
]

[tool.setuptools]
package-dir = {"" = "packages", "tools" = "tools"}

[tool.setuptools.packages.find]
where = ["packages"]
include = ["poker_core*"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["E","F","UP","I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.report]
show_missing = true

[tool.mypy]
mypy_path = "packages"
packages = ["poker_core"]
